code refactoring yippee :D